// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Pill with border 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#C0C7DE",
        "borderColor": "#1A9550",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 6,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    Icon
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "width": 6,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "display": "flex",
          "fontFamily": "UniswapSansBeta4-Medium",
          "fontSize": 14,
        },
        Object {
          "color": undefined,
        },
      ]
    }
  >
    My Second Pill Label
  </Text>
</View>
`;

exports[`renders a Pill without image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FD4040",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 6,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "display": "flex",
          "fontFamily": "UniswapSansBeta4-Medium",
          "fontSize": 14,
        },
        Object {
          "color": "deprecated_blue",
        },
      ]
    }
  >
    My Pill Label
  </Text>
</View>
`;
